feat: improve system file manager
